Removing .idea files

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@ Server/node_modules
 Client/node_modules
 
 # Webstorm
-./idea
+./.idea
 Client/.idea
 Server/.idea
-
 
 # Logs
 logs
@@ -21,3 +20,5 @@ pids
 *.seed
 *.pid.lock
 /dist
+
+./.DS_Store
