--- a/Client/package.json
+++ b/Client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode production --port 8081",
+    "start": "webpack-dev-server --mode development --port 8081",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
