--- a/Client/package.json
+++ b/Client/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --port 8081",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "start": "webpack-dev-server --mode production --host 0.0.0.0 --port 8081",
+    "dev": "webpack --mode development --host 0.0.0.0",
+    "build": "webpack --mode production --host 0.0.0.0"
   },
   "keywords": [],
   "author": "",
