--- a/Client/package.json
+++ b/Client/package.json
@@ -25,12 +25,15 @@
     "typescript": "^2.9.2",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "@types/react": "^16.4.5",
     "@types/react-dom": "^16.0.6",
+    "jdenticon": "^2.1.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-icons": "^3.2.2",
+    "sweetalert": "^2.1.2"
   }
 }
