--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "react-search-input": "^0.11.3"
   }
 }
