--- a/Server/package.json
+++ b/Server/package.json
@@ -26,6 +26,6 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "react-search-input": "^0.11.3"
+    "fuzzy": "^0.1.3"
   }
 }
