--- a/Client/package.json
+++ b/Client/package.json
@@ -34,6 +34,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-icons": "^3.2.2",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^7.29.2"
   }
 }
