--- a/Client/package.json
+++ b/Client/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@types/react": "^16.4.5",
     "@types/react-dom": "^16.0.6",
+    "fuzzy": "^0.1.3",
     "jdenticon": "^2.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
